parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     declaraciones -> declaracion
Rule 3     declaraciones -> declaraciones declaracion
Rule 4     declaracion -> asignacion
Rule 5     declaracion -> impresion
Rule 6     declaracion -> condicional
Rule 7     declaracion -> ciclo_while
Rule 8     asignacion -> VARIABLE ID IGUAL expresion
Rule 9     impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 10    condicional -> SI PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
Rule 11    condicional -> SI PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER SINO LLAVE_IZQ declaraciones LLAVE_DER
Rule 12    ciclo_while -> MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
Rule 13    expresion -> ID
Rule 14    expresion -> NUMERO
Rule 15    expresion -> CADENA
Rule 16    expresion -> expresion SUMA expresion
Rule 17    expresion -> expresion RESTA expresion
Rule 18    expresion -> expresion MULTIPLICACION expresion
Rule 19    expresion -> expresion DIVISION expresion
Rule 20    expresion -> expresion MENOR expresion
Rule 21    expresion -> expresion MAYOR expresion

Terminals, with rules where they appear

CADENA               : 15
DIVISION             : 19
ID                   : 8 13
IGUAL                : 8
IMPRIMIR             : 9
LLAVE_DER            : 10 11 11 12
LLAVE_IZQ            : 10 11 11 12
MAYOR                : 21
MENOR                : 20
MIENTRAS             : 12
MULTIPLICACION       : 18
NUMERO               : 14
PARENTESIS_DER       : 9 10 11 12
PARENTESIS_IZQ       : 9 10 11 12
RESTA                : 17
SI                   : 10 11
SINO                 : 11
SUMA                 : 16
VARIABLE             : 8
error                : 

Nonterminals, with rules where they appear

asignacion           : 4
ciclo_while          : 7
condicional          : 6
declaracion          : 2 3
declaraciones        : 1 3 10 11 11 12
expresion            : 8 9 10 11 12 16 16 17 17 18 18 19 19 20 20 21 21
impresion            : 5
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (2) declaraciones -> . declaracion
    (3) declaraciones -> . declaraciones declaracion
    (4) declaracion -> . asignacion
    (5) declaracion -> . impresion
    (6) declaracion -> . condicional
    (7) declaracion -> . ciclo_while
    (8) asignacion -> . VARIABLE ID IGUAL expresion
    (9) impresion -> . IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) condicional -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
    (11) condicional -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER SINO LLAVE_IZQ declaraciones LLAVE_DER
    (12) ciclo_while -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER

    VARIABLE        shift and go to state 8
    IMPRIMIR        shift and go to state 9
    SI              shift and go to state 10
    MIENTRAS        shift and go to state 11

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    declaracion                    shift and go to state 3
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    condicional                    shift and go to state 6
    ciclo_while                    shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .
    (3) declaraciones -> declaraciones . declaracion
    (4) declaracion -> . asignacion
    (5) declaracion -> . impresion
    (6) declaracion -> . condicional
    (7) declaracion -> . ciclo_while
    (8) asignacion -> . VARIABLE ID IGUAL expresion
    (9) impresion -> . IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) condicional -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
    (11) condicional -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER SINO LLAVE_IZQ declaraciones LLAVE_DER
    (12) ciclo_while -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER

    $end            reduce using rule 1 (programa -> declaraciones .)
    VARIABLE        shift and go to state 8
    IMPRIMIR        shift and go to state 9
    SI              shift and go to state 10
    MIENTRAS        shift and go to state 11

    declaracion                    shift and go to state 12
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    condicional                    shift and go to state 6
    ciclo_while                    shift and go to state 7

state 3

    (2) declaraciones -> declaracion .

    VARIABLE        reduce using rule 2 (declaraciones -> declaracion .)
    IMPRIMIR        reduce using rule 2 (declaraciones -> declaracion .)
    SI              reduce using rule 2 (declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 2 (declaraciones -> declaracion .)
    $end            reduce using rule 2 (declaraciones -> declaracion .)
    LLAVE_DER       reduce using rule 2 (declaraciones -> declaracion .)


state 4

    (4) declaracion -> asignacion .

    VARIABLE        reduce using rule 4 (declaracion -> asignacion .)
    IMPRIMIR        reduce using rule 4 (declaracion -> asignacion .)
    SI              reduce using rule 4 (declaracion -> asignacion .)
    MIENTRAS        reduce using rule 4 (declaracion -> asignacion .)
    $end            reduce using rule 4 (declaracion -> asignacion .)
    LLAVE_DER       reduce using rule 4 (declaracion -> asignacion .)


state 5

    (5) declaracion -> impresion .

    VARIABLE        reduce using rule 5 (declaracion -> impresion .)
    IMPRIMIR        reduce using rule 5 (declaracion -> impresion .)
    SI              reduce using rule 5 (declaracion -> impresion .)
    MIENTRAS        reduce using rule 5 (declaracion -> impresion .)
    $end            reduce using rule 5 (declaracion -> impresion .)
    LLAVE_DER       reduce using rule 5 (declaracion -> impresion .)


state 6

    (6) declaracion -> condicional .

    VARIABLE        reduce using rule 6 (declaracion -> condicional .)
    IMPRIMIR        reduce using rule 6 (declaracion -> condicional .)
    SI              reduce using rule 6 (declaracion -> condicional .)
    MIENTRAS        reduce using rule 6 (declaracion -> condicional .)
    $end            reduce using rule 6 (declaracion -> condicional .)
    LLAVE_DER       reduce using rule 6 (declaracion -> condicional .)


state 7

    (7) declaracion -> ciclo_while .

    VARIABLE        reduce using rule 7 (declaracion -> ciclo_while .)
    IMPRIMIR        reduce using rule 7 (declaracion -> ciclo_while .)
    SI              reduce using rule 7 (declaracion -> ciclo_while .)
    MIENTRAS        reduce using rule 7 (declaracion -> ciclo_while .)
    $end            reduce using rule 7 (declaracion -> ciclo_while .)
    LLAVE_DER       reduce using rule 7 (declaracion -> ciclo_while .)


state 8

    (8) asignacion -> VARIABLE . ID IGUAL expresion

    ID              shift and go to state 13


state 9

    (9) impresion -> IMPRIMIR . PARENTESIS_IZQ expresion PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 14


state 10

    (10) condicional -> SI . PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
    (11) condicional -> SI . PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER SINO LLAVE_IZQ declaraciones LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 15


state 11

    (12) ciclo_while -> MIENTRAS . PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 16


state 12

    (3) declaraciones -> declaraciones declaracion .

    VARIABLE        reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    IMPRIMIR        reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    SI              reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    MIENTRAS        reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    $end            reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    LLAVE_DER       reduce using rule 3 (declaraciones -> declaraciones declaracion .)


state 13

    (8) asignacion -> VARIABLE ID . IGUAL expresion

    IGUAL           shift and go to state 17


state 14

    (9) impresion -> IMPRIMIR PARENTESIS_IZQ . expresion PARENTESIS_DER
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 18

state 15

    (10) condicional -> SI PARENTESIS_IZQ . expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
    (11) condicional -> SI PARENTESIS_IZQ . expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER SINO LLAVE_IZQ declaraciones LLAVE_DER
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 22

state 16

    (12) ciclo_while -> MIENTRAS PARENTESIS_IZQ . expresion PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 23

state 17

    (8) asignacion -> VARIABLE ID IGUAL . expresion
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 24

state 18

    (9) impresion -> IMPRIMIR PARENTESIS_IZQ expresion . PARENTESIS_DER
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

    PARENTESIS_DER  shift and go to state 25
    SUMA            shift and go to state 26
    RESTA           shift and go to state 27
    MULTIPLICACION  shift and go to state 28
    DIVISION        shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR           shift and go to state 31


state 19

    (13) expresion -> ID .

    PARENTESIS_DER  reduce using rule 13 (expresion -> ID .)
    SUMA            reduce using rule 13 (expresion -> ID .)
    RESTA           reduce using rule 13 (expresion -> ID .)
    MULTIPLICACION  reduce using rule 13 (expresion -> ID .)
    DIVISION        reduce using rule 13 (expresion -> ID .)
    MENOR           reduce using rule 13 (expresion -> ID .)
    MAYOR           reduce using rule 13 (expresion -> ID .)
    VARIABLE        reduce using rule 13 (expresion -> ID .)
    IMPRIMIR        reduce using rule 13 (expresion -> ID .)
    SI              reduce using rule 13 (expresion -> ID .)
    MIENTRAS        reduce using rule 13 (expresion -> ID .)
    $end            reduce using rule 13 (expresion -> ID .)
    LLAVE_DER       reduce using rule 13 (expresion -> ID .)


state 20

    (14) expresion -> NUMERO .

    PARENTESIS_DER  reduce using rule 14 (expresion -> NUMERO .)
    SUMA            reduce using rule 14 (expresion -> NUMERO .)
    RESTA           reduce using rule 14 (expresion -> NUMERO .)
    MULTIPLICACION  reduce using rule 14 (expresion -> NUMERO .)
    DIVISION        reduce using rule 14 (expresion -> NUMERO .)
    MENOR           reduce using rule 14 (expresion -> NUMERO .)
    MAYOR           reduce using rule 14 (expresion -> NUMERO .)
    VARIABLE        reduce using rule 14 (expresion -> NUMERO .)
    IMPRIMIR        reduce using rule 14 (expresion -> NUMERO .)
    SI              reduce using rule 14 (expresion -> NUMERO .)
    MIENTRAS        reduce using rule 14 (expresion -> NUMERO .)
    $end            reduce using rule 14 (expresion -> NUMERO .)
    LLAVE_DER       reduce using rule 14 (expresion -> NUMERO .)


state 21

    (15) expresion -> CADENA .

    PARENTESIS_DER  reduce using rule 15 (expresion -> CADENA .)
    SUMA            reduce using rule 15 (expresion -> CADENA .)
    RESTA           reduce using rule 15 (expresion -> CADENA .)
    MULTIPLICACION  reduce using rule 15 (expresion -> CADENA .)
    DIVISION        reduce using rule 15 (expresion -> CADENA .)
    MENOR           reduce using rule 15 (expresion -> CADENA .)
    MAYOR           reduce using rule 15 (expresion -> CADENA .)
    VARIABLE        reduce using rule 15 (expresion -> CADENA .)
    IMPRIMIR        reduce using rule 15 (expresion -> CADENA .)
    SI              reduce using rule 15 (expresion -> CADENA .)
    MIENTRAS        reduce using rule 15 (expresion -> CADENA .)
    $end            reduce using rule 15 (expresion -> CADENA .)
    LLAVE_DER       reduce using rule 15 (expresion -> CADENA .)


state 22

    (10) condicional -> SI PARENTESIS_IZQ expresion . PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
    (11) condicional -> SI PARENTESIS_IZQ expresion . PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER SINO LLAVE_IZQ declaraciones LLAVE_DER
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

    PARENTESIS_DER  shift and go to state 32
    SUMA            shift and go to state 26
    RESTA           shift and go to state 27
    MULTIPLICACION  shift and go to state 28
    DIVISION        shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR           shift and go to state 31


state 23

    (12) ciclo_while -> MIENTRAS PARENTESIS_IZQ expresion . PARENTESIS_DER LLAVE_IZQ declaraciones LLAVE_DER
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

    PARENTESIS_DER  shift and go to state 33
    SUMA            shift and go to state 26
    RESTA           shift and go to state 27
    MULTIPLICACION  shift and go to state 28
    DIVISION        shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR           shift and go to state 31


state 24

    (8) asignacion -> VARIABLE ID IGUAL expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

    VARIABLE        reduce using rule 8 (asignacion -> VARIABLE ID IGUAL expresion .)
    IMPRIMIR        reduce using rule 8 (asignacion -> VARIABLE ID IGUAL expresion .)
    SI              reduce using rule 8 (asignacion -> VARIABLE ID IGUAL expresion .)
    MIENTRAS        reduce using rule 8 (asignacion -> VARIABLE ID IGUAL expresion .)
    $end            reduce using rule 8 (asignacion -> VARIABLE ID IGUAL expresion .)
    LLAVE_DER       reduce using rule 8 (asignacion -> VARIABLE ID IGUAL expresion .)
    SUMA            shift and go to state 26
    RESTA           shift and go to state 27
    MULTIPLICACION  shift and go to state 28
    DIVISION        shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR           shift and go to state 31


state 25

    (9) impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER .

    VARIABLE        reduce using rule 9 (impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER .)
    IMPRIMIR        reduce using rule 9 (impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER .)
    SI              reduce using rule 9 (impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER .)
    MIENTRAS        reduce using rule 9 (impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER .)
    $end            reduce using rule 9 (impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER .)
    LLAVE_DER       reduce using rule 9 (impresion -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER .)


state 26

    (16) expresion -> expresion SUMA . expresion
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 34

state 27

    (17) expresion -> expresion RESTA . expresion
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 35

state 28

    (18) expresion -> expresion MULTIPLICACION . expresion
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 36

state 29

    (19) expresion -> expresion DIVISION . expresion
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 37

state 30

    (20) expresion -> expresion MENOR . expresion
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 38

state 31

    (21) expresion -> expresion MAYOR . expresion
    (13) expresion -> . ID
    (14) expresion -> . NUMERO
    (15) expresion -> . CADENA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR expresion
    (21) expresion -> . expresion MAYOR expresion

    ID              shift and go to state 19
    NUMERO          shift and go to state 20
    CADENA          shift and go to state 21

    expresion                      shift and go to state 39

state 32

    (10) condicional -> SI PARENTESIS_IZQ expresion PARENTESIS_DER . LLAVE_IZQ declaraciones LLAVE_DER
    (11) condicional -> SI PARENTESIS_IZQ expresion PARENTESIS_DER . LLAVE_IZQ declaraciones LLAVE_DER SINO LLAVE_IZQ declaraciones LLAVE_DER

    LLAVE_IZQ       shift and go to state 40


state 33

    (12) ciclo_while -> MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER . LLAVE_IZQ declaraciones LLAVE_DER

    LLAVE_IZQ       shift and go to state 41


state 34

    (16) expresion -> expresion SUMA expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MENOR resolved as shift
  ! shift/reduce conflict for MAYOR resolved as shift
    PARENTESIS_DER  reduce using rule 16 (expresion -> expresion SUMA expresion .)
    VARIABLE        reduce using rule 16 (expresion -> expresion SUMA expresion .)
    IMPRIMIR        reduce using rule 16 (expresion -> expresion SUMA expresion .)
    SI              reduce using rule 16 (expresion -> expresion SUMA expresion .)
    MIENTRAS        reduce using rule 16 (expresion -> expresion SUMA expresion .)
    $end            reduce using rule 16 (expresion -> expresion SUMA expresion .)
    LLAVE_DER       reduce using rule 16 (expresion -> expresion SUMA expresion .)
    SUMA            shift and go to state 26
    RESTA           shift and go to state 27
    MULTIPLICACION  shift and go to state 28
    DIVISION        shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR           shift and go to state 31

  ! SUMA            [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! RESTA           [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! DIVISION        [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! MENOR           [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]
  ! MAYOR           [ reduce using rule 16 (expresion -> expresion SUMA expresion .) ]


state 35

    (17) expresion -> expresion RESTA expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MENOR resolved as shift
  ! shift/reduce conflict for MAYOR resolved as shift
    PARENTESIS_DER  reduce using rule 17 (expresion -> expresion RESTA expresion .)
    VARIABLE        reduce using rule 17 (expresion -> expresion RESTA expresion .)
    IMPRIMIR        reduce using rule 17 (expresion -> expresion RESTA expresion .)
    SI              reduce using rule 17 (expresion -> expresion RESTA expresion .)
    MIENTRAS        reduce using rule 17 (expresion -> expresion RESTA expresion .)
    $end            reduce using rule 17 (expresion -> expresion RESTA expresion .)
    LLAVE_DER       reduce using rule 17 (expresion -> expresion RESTA expresion .)
    SUMA            shift and go to state 26
    RESTA           shift and go to state 27
    MULTIPLICACION  shift and go to state 28
    DIVISION        shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR           shift and go to state 31

  ! SUMA            [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! RESTA           [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! DIVISION        [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! MENOR           [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]
  ! MAYOR           [ reduce using rule 17 (expresion -> expresion RESTA expresion .) ]


state 36

    (18) expresion -> expresion MULTIPLICACION expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MENOR resolved as shift
  ! shift/reduce conflict for MAYOR resolved as shift
    PARENTESIS_DER  reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    VARIABLE        reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    IMPRIMIR        reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    SI              reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    MIENTRAS        reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    $end            reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    LLAVE_DER       reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .)
    SUMA            shift and go to state 26
    RESTA           shift and go to state 27
    MULTIPLICACION  shift and go to state 28
    DIVISION        shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR           shift and go to state 31

  ! SUMA            [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! RESTA           [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! MULTIPLICACION  [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! DIVISION        [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! MENOR           [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]
  ! MAYOR           [ reduce using rule 18 (expresion -> expresion MULTIPLICACION expresion .) ]


state 37

    (19) expresion -> expresion DIVISION expresion .
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR expresion
    (21) expresion -> expresion . MAYOR expresion

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for MULTIPLICACION resolved as shift
  ! shift/reduce conflict for DIVISION resolved as shift
  ! shift/reduce conflict for MENOR resolved as shift
  ! shift/reduce conflict for MAYOR resolved as shift
    PARENTESIS_DER  reduce using rule 19 (expresion -> expresion DIVISION expresion .)
    VARIABLE        reduce using rule 19 (expresion -> expresion DIVISION expresion .)
    IMPRIMIR        reduce using rule 19 (expresion -> expresion DIVISION expresion .)
    SI              reduce using rule 19 (expresion -> expresion DIVISION expresion .)
    MIENTRAS        reduce using rule 19 (expresion -> expresion DIVISION expresion .)
